# NavToolsLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
hdr/navtools/: DegreeValue.hpp  Ellipsoid.hpp  Longitude.hpp  Point.hpp  rhumbline.hpp
hdr/navtools/utils/: mathUtils.hpp  stringUtils.hpp
include/navtools/: Course.hpp  Ellipsoid.hpp  GES.hpp  Latitude.hpp  Point.hpp  rhumbline.hpp
src/: Course.cpp  DegreeValue.cpp  Ellipsoid.cpp  GES.cpp  Latitude.cpp  Longitude.cpp  Point.cpp  rhumbline.cpp
tests/: Course-test.cpp  GES-test.cpp  Latitude-test.cpp  Longitude-test.cpp  Point-test.cpp  rhumbline-test.cpp
